// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`index streams - commits 1`] = `
[
  {
    "author": {
      "user": {
        "accountId": "987654321:abcd1234-5678-90ef-ghij-klmnopqrstuv",
        "displayName": "John Doe",
        "links": {
          "htmlUrl": "https://bitbucket.org/%7B12345678-abcd-efgh-ijkl-1234567890ab%7D/",
        },
        "type": "user",
        "uuid": "{12345678-abcd-efgh-ijkl-1234567890ab}",
      },
    },
    "date": "2024-09-02T12:46:33+00:00",
    "hash": "26d1ac958f6ca6367248297a5888d3cbeb4a0a18",
    "links": {
      "htmlUrl": "https://bitbucket.org/fantasycorp/project-xy/commits/26d1ac958f6ca6367248297a5888d3cbeb4a0a18",
    },
    "message": "Initial commit in main branch",
    "repository": {
      "fullName": "fantasycorp/project-xy",
    },
    "type": "commit",
  },
  {
    "author": {
      "user": {
        "accountId": "987654321:abcd5678-90ef-ghij-klmnopqrstuv",
        "displayName": "Jane Doe",
        "links": {
          "htmlUrl": "https://bitbucket.org/%7B98765432-abcd-efgh-ijkl-0987654321ab%7D/",
        },
        "type": "user",
        "uuid": "{98765432-abcd-efgh-ijkl-0987654321ab}",
      },
    },
    "date": "2024-08-15T14:34:54+00:00",
    "hash": "b1a0aeaf0ab75a64a811b60e7514d7ce74e4d71f",
    "links": {
      "htmlUrl": "https://bitbucket.org/fantasycorp/project-xy/commits/b1a0aeaf0ab75a64a811b60e7514d7ce74e4d71f",
    },
    "message": ".gitignore created online with Bitbucket",
    "repository": {
      "fullName": "fantasycorp/project-xy",
    },
    "type": "commit",
  },
]
`;

exports[`index streams - repositories 1`] = `
[
  {
    "createdOn": "2019-10-05T19:57:58.110061+00:00",
    "description": "",
    "fullName": "RomanKyrnis/geekhub2019",
    "hasIssues": false,
    "htmlUrl": "https://bitbucket.org/RomanKyrnis/geekhub2019",
    "isPrivate": true,
    "language": "",
    "mainBranch": "master",
    "size": 788051,
    "slug": "geekhub2019",
    "updatedOn": "2021-12-05T08:25:02.254785+00:00",
    "workspace": "YulyKo",
  },
  {
    "createdOn": "2020-12-08T20:11:01.021646+00:00",
    "description": "",
    "fullName": "RomanKyrnis/client",
    "hasIssues": false,
    "htmlUrl": "https://bitbucket.org/RomanKyrnis/client",
    "isPrivate": true,
    "language": "",
    "mainBranch": "master",
    "size": 1935443,
    "slug": "client",
    "updatedOn": "2021-08-04T19:28:34.344761+00:00",
    "workspace": "YulyKo",
  },
  {
    "createdOn": "2020-12-08T09:02:34.226492+00:00",
    "description": "",
    "fullName": "RomanKyrnis/kievcameras",
    "hasIssues": false,
    "htmlUrl": "https://bitbucket.org/RomanKyrnis/kievcameras",
    "isPrivate": true,
    "language": "",
    "mainBranch": "master",
    "size": 2189925,
    "slug": "kievcameras",
    "updatedOn": "2021-08-03T09:17:51.311690+00:00",
    "workspace": "YulyKo",
  },
  {
    "createdOn": "2019-10-05T19:57:58.110061+00:00",
    "description": "",
    "fullName": "RomanKyrnis/geekhub2019",
    "hasIssues": false,
    "htmlUrl": "https://bitbucket.org/RomanKyrnis/geekhub2019",
    "isPrivate": true,
    "language": "",
    "mainBranch": "master",
    "size": 788051,
    "slug": "geekhub2019",
    "updatedOn": "2021-12-05T08:25:02.254785+00:00",
    "workspace": "objectivemax",
  },
  {
    "createdOn": "2020-12-08T20:11:01.021646+00:00",
    "description": "",
    "fullName": "RomanKyrnis/client",
    "hasIssues": false,
    "htmlUrl": "https://bitbucket.org/RomanKyrnis/client",
    "isPrivate": true,
    "language": "",
    "mainBranch": "master",
    "size": 1935443,
    "slug": "client",
    "updatedOn": "2021-08-04T19:28:34.344761+00:00",
    "workspace": "objectivemax",
  },
  {
    "createdOn": "2020-12-08T09:02:34.226492+00:00",
    "description": "",
    "fullName": "RomanKyrnis/kievcameras",
    "hasIssues": false,
    "htmlUrl": "https://bitbucket.org/RomanKyrnis/kievcameras",
    "isPrivate": true,
    "language": "",
    "mainBranch": "master",
    "size": 2189925,
    "slug": "kievcameras",
    "updatedOn": "2021-08-03T09:17:51.311690+00:00",
    "workspace": "objectivemax",
  },
  {
    "createdOn": "2019-10-05T19:57:58.110061+00:00",
    "description": "",
    "fullName": "RomanKyrnis/geekhub2019",
    "hasIssues": false,
    "htmlUrl": "https://bitbucket.org/RomanKyrnis/geekhub2019",
    "isPrivate": true,
    "language": "",
    "mainBranch": "master",
    "size": 788051,
    "slug": "geekhub2019",
    "updatedOn": "2021-12-05T08:25:02.254785+00:00",
    "workspace": "RomanKyrnis",
  },
  {
    "createdOn": "2020-12-08T20:11:01.021646+00:00",
    "description": "",
    "fullName": "RomanKyrnis/client",
    "hasIssues": false,
    "htmlUrl": "https://bitbucket.org/RomanKyrnis/client",
    "isPrivate": true,
    "language": "",
    "mainBranch": "master",
    "size": 1935443,
    "slug": "client",
    "updatedOn": "2021-08-04T19:28:34.344761+00:00",
    "workspace": "RomanKyrnis",
  },
  {
    "createdOn": "2020-12-08T09:02:34.226492+00:00",
    "description": "",
    "fullName": "RomanKyrnis/kievcameras",
    "hasIssues": false,
    "htmlUrl": "https://bitbucket.org/RomanKyrnis/kievcameras",
    "isPrivate": true,
    "language": "",
    "mainBranch": "master",
    "size": 2189925,
    "slug": "kievcameras",
    "updatedOn": "2021-08-03T09:17:51.311690+00:00",
    "workspace": "RomanKyrnis",
  },
]
`;

exports[`index streams - repositories with bucketing 1`] = `
[
  {
    "createdOn": "2020-12-08T09:02:34.226492+00:00",
    "description": "",
    "fullName": "RomanKyrnis/kievcameras",
    "hasIssues": false,
    "htmlUrl": "https://bitbucket.org/RomanKyrnis/kievcameras",
    "isPrivate": true,
    "language": "",
    "mainBranch": "master",
    "size": 2189925,
    "slug": "kievcameras",
    "updatedOn": "2021-08-03T09:17:51.311690+00:00",
    "workspace": "objectivemax",
  },
]
`;

exports[`index streams - workspace_users 1`] = `
[
  {
    "user": {
      "accountId": "712020:b4f37d53-22ad-4770-ae6a-a7022897f87e",
      "displayName": "John Doe",
      "links": {
        "htmlUrl": "https://bitbucket.org/%7B0ee8b2b4-0bec-41be-a698-e584ab10c586%7D/",
      },
      "type": "user",
      "uuid": "{0ee8b2b4-0bec-41be-a698-e584ab10c586}",
    },
    "workspace": {
      "slug": "test",
      "uuid": "{33db76fb-7682-4f94-8b58-6b64de16e35f}",
    },
  },
  {
    "user": {
      "accountId": "12345:b4f37d53-bb31-4770-aaa3-a7022892124",
      "displayName": "Jane Doe",
      "links": {
        "htmlUrl": "https://bitbucket.org/%FAD0ee8b2b4-112-abc-a698-e584ab101246%AB/",
      },
      "type": "user",
      "uuid": "{0ee8b2b4-1234-41be-abcd-e584ab10c586}",
    },
    "workspace": {
      "slug": "test",
      "uuid": "{33db76fb-7682-4f94-8b58-6b64de16e35f}",
    },
  },
]
`;

exports[`index streams - workspaces 1`] = `
[
  {
    "createdOn": "2020-12-08T18:52:43.318039+00:00",
    "isPrivate": false,
    "links": {
      "htmlUrl": "https://bitbucket.org/YulyKo/",
      "ownersUrl": "https://api.bitbucket.org/2.0/workspaces/YulyKo/members?q=permission%3D%22owner%22",
      "repositoriesUrl": "https://api.bitbucket.org/2.0/repositories/YulyKo",
    },
    "name": "Yulia Kotenko",
    "slug": "YulyKo",
    "type": "workspace",
    "uuid": "{25336f4e-358d-4ba6-afb9-f8d25284ecaf}",
  },
  {
    "createdOn": "2020-12-08T18:52:43.318039+00:00",
    "isPrivate": false,
    "links": {
      "htmlUrl": "https://bitbucket.org/YulyKo/",
      "ownersUrl": "https://api.bitbucket.org/2.0/workspaces/YulyKo/members?q=permission%3D%22owner%22",
      "repositoriesUrl": "https://api.bitbucket.org/2.0/repositories/YulyKo",
    },
    "name": "Yulia Kotenko",
    "slug": "YulyKo",
    "type": "workspace",
    "uuid": "{25336f4e-358d-4ba6-afb9-f8d25284ecaf}",
  },
  {
    "createdOn": "2020-12-08T18:52:43.318039+00:00",
    "isPrivate": false,
    "links": {
      "htmlUrl": "https://bitbucket.org/YulyKo/",
      "ownersUrl": "https://api.bitbucket.org/2.0/workspaces/YulyKo/members?q=permission%3D%22owner%22",
      "repositoriesUrl": "https://api.bitbucket.org/2.0/repositories/YulyKo",
    },
    "name": "Yulia Kotenko",
    "slug": "YulyKo",
    "type": "workspace",
    "uuid": "{25336f4e-358d-4ba6-afb9-f8d25284ecaf}",
  },
]
`;
